# league-of-noobs

./: .collaborators  README.md  pyproject.toml
league/: Team.py  __main__.py  ability.py  battle.py  game.py  item.py  stats.py  team.py  unit.py
tests/: test_item.py  test_stats.py
