[tool.poetry]
name = "league-of-noobs"
version = "0.1.0"
description = "A game created by my Grade 12a class"
authors = ["mrgallo <daniel.gallo@ycdsbk12.ca>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pytest = "^6.2.5"
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
